# ipyvuetify

./: .bumpversion.cfg  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  ApiToSchema.py  LICENSE  MANIFEST.in  README.md  RELEASE.md  Untitled.ipynb  Untitled1.ipynb  api.js  gen.sh  generate_source.py  generate_source.sh  mypy.ini  noxfile.py  package-lock.json  pyproject.toml  release.sh  setup.cfg  setup.py  test.html  toto.ipynb  trigger build
.github/workflows/: build.yaml  release.yaml  release_test.yaml  test.yml
docs/: advanced_usage.rst  conf.py  fruit-selector.vue  index.rst  installation.rst  introduction.rst  requirements.txt  showcase.py  template_usage.rst  translating_vuetify.rst  usage.rst
docs/_static/: custom.css  jupyter-vuetify-embed-amd.js
docs/advance/: index.rst
docs/gallery/: index.rst
docs/legacy/: index.rst  introduction.rst  showcase.py
docs/usage/: authors  index.rst  installation.rst  license.rst
examples/: Examples template.ipynb  Examples.ipynb
examples/extra/: FileInput example random access.ipynb  FileInput.ipynb
generate_source/: __init__.py  base.json  build.sh  es6-template.njk  generate_api.sh  generate_code.py  generate_schema.py  generate_source.py  package-lock.json  package.json  patch_vuetify_build.py  python.njk  vuetify_api.json  vuetify_api_1.5.12.json  vuetify_api_1.5.6.json  vuetify_api_2.0.17.json
ipyvuetify/: Btn.py  Events.py  Html.py  Icon.py  Text.py  Themes.py  VuetifyTemplate.py  VuetifyWidget.py  _VuetifyTemplate.py  __init__.py  _version.py  components.py  example.py  generated.py  vuetify_widget.py  vuetify_widgets.py
ipyvuetify/extra/: __init__.py  file_input.py  file_input.vue
js/: .babelrc  .eslintrc.js  README.md  package-lock.json  package.json  patch_vuetify.js  postcss.config.js  webpack.config.docs.js  webpack.config.js  webpack.config.lab3.js
js/gen-source/: base.json  es6-template.njk  ipyvuetify.json  python.njk  widget_gen_schema.json
js/lib/: Btn.js  Html.js  Icon.js  Text.js  VuetifyBaseView.js  VuetifyTemplate.js  VuetifyTemplateView.js  VuetifyView.js  VuetifyWidget.js  embed.js  extension.js  helpers.js  index.js  jupyterEnvironment.js  labplugin.js  nodeps.js  nodepsEmbed.js  notebook.js  public-path.js  styles.css
js/lib-old/: Btn.js  Icon.js  Text.js  VuetifyWidget.js  embed.js  example.js  index.js  labplugin.js  styles.css
js/src/: Html.js  Themes.js  VueRenderer.js  VueTemplateRenderer.js  VuetifyApp.js  VuetifyBaseView.js  VuetifyTemplate.js  VuetifyTemplateView.js  VuetifyView.js  VuetifyWidget.js  Widgets.js  embed.js  extension.js  index.js  ipyvuetify-styles.css  jupyterEnvironment.js  labplugin.js  nodeps.js  nodepsEmbed.js  nodepsVuetifyView.js  notebook.js  public-path.js  styles.css  vue_alias.js
js/src/plugins/: noDepsVuetify.js  nodepsVuetify.js  vuetify.js
notebooks/: Slider.ipynb  Template versie.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  Untitled6.ipynb  Untitled7.ipynb
tests/ui/: button_test.py
ui-tests/: button_test.py
